--- a/mainConsole/mainConsole.csproj
+++ b/mainConsole/mainConsole.csproj
@@ -38,4 +38,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{9C848BB0-A8DB-4D95-8C39-46824355FE65}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
